# MechTabby

./: CompileGuide.txt  README.md  nvim-stuff  out.txt
Arduino/Movement-Detection/: Movement-Detection.ino
Arduino/Pro-Micro-Blink/: Pro-Micro-Blink.ino
Arduino/ShinyHunter-2/: Code.txt
C/Pi-Pico/: CompileGuide.txt
C/Pi-Pico/myBlink/: CMakeLists.txt  myBlink.c
C/Pi-Pico/tiny2/: CMakeLists.txt  build.bat
C/Pi-Pico/tiny2/include/: tusb_config.h
C/Pi-Pico/tiny2/src/: main.c  usb_callbacks.c
C/cmake_samples/: CMakeLists_random_sample.txt
C/test/: build.bat
CTFs/: pwsh-commands.txt  steganography.txt
CTFs/CorruptedFile/: file_hex_modified
CTFs/FlagInFlame/: Hex_String.txt  flag
CTFs/HiddenInPlainSite/: b641  b642  out  steg_output
CTFs/RED/: CHECKLSB  Output  RGBA_DATA  Steganography.py  red.py
CTFs/RiddleRegistry/: Author.txt  flag
CTFs/Tools/: TextExtractor.py
Java/: JavaGuide1.20.x  Main.java
LibreOffice/: Test Document.odt
R/Samples/: test.R
bat/Auto-Backup/: Backup.bat  BackupAll.bat  GetBundleHash.bat  ProjectList.txt  README.md  WriteToLog.bat  log.csv
cpp/: HKR
cpp/HelloWorld/: build.bat
cpp/IDE/: build.bat  main.cpp
cpp/MemoryReader/: build.bat  main.cpp  readme.md
cpp/SessionHook/: Build.bat  main.cpp
cpp/TestProgram/: build.bat  main.cpp
cpp/UR-Robot/: CMakeLists.txt  build.bat
cpp/UR-Robot/src/: connection_test.cpp
cpp/curlSample/: build.bat  curlpp-install-guide  main.cpp
cpp/dllTest/: build.bat  main.cpp  myLibrary.cpp
cpp/filesystem/: README.md  build.bat  main.cpp
cpp/inject/: SampleDll.cpp  ShellInjector.cpp  build.bat  injector.cpp  injectorDll.cpp  payload.cpp
cpp/keyReader/: build.bat  main.cpp  out.txt  sample.json  sample2.json  sample3_out.txt  sample4_out.txt  sample5.txt
cpp/keyboardProc/: build.bat  main.cpp
cpp/keyboardProc-WithNotes/: build.bat  main.cpp
cpp/race/: build.bat  main.cpp
python/: 3D-Program.py  AutoZipper.spec  CrusherCalc.py  DrillCalc.py  Pyinstaller-Guide.txt  Python-Style-Guide.txt  Regex-Guide.txt  SandboxSetup.py  example.ply  miniconda-install.bat
python/AutoZipper/: Build.bat
python/CPE/: build.bat  debug_profile_chrome.bat  debug_temp_chrome.bat  gcp.spec  main.py
python/CS2-Skin-Tools/: float-adjuster.py
python/CTF-Helper/: main.py
python/Cube/: main.py
python/DateFixer/: build.bat  main.py
python/DictBuild/: Gen2.py  main.py  payload  sample passwords  tmp.py
python/Lizard/: Lizard.py  Lizard_2.py
python/NeuralNetwork/: main.py  requirements.txt  tfsetup.txt
python/Plots/: csvPlot.py
python/RAT/: README.md
python/Samples/: CoilCalc.py  DischargeCoil.py
python/Sweep/: main.py
python/Test-Project/: Compile.bat  Test.spec  run.bat
python/TextingGame/: OllamaApiTest.py  README.md  main.py  start_ai.bat  test_conn.bat
python/Wireless-Camera/: V1.py  main.py
tinyTest/: CMakeLists.txt
tinyTest/src/: helloUSB.c
(+245 files in other folders)
